fixed time form not showing up bugs, put saved msg

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -11,6 +11,7 @@
   padding: 0 17px;
   background-color: white;
   box-shadow: 0 0 32px rgba(0, 0, 0, .15);
+  color: var(--primary-color);
 }
 
 .header h1 {
